# GTK4Test

./: .gitignore  CMakeLists.txt  README.md  hello.cpp  main.cpp
hello/: CMakeLists.txt  hello.cpp
